--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -70,28 +70,41 @@
      - date:            02/16
        topics:          Databases, SQL
        items:
-           - name: Agenda
-             link: agenda10.html
+           - name: Notes
+             link: notes10.html
 
      - date:            02/21
        topics:          SQLite with Python
+       items:
+           - name: Notes
+             link: notes11.html
        assignment: 
             name: Homework 4       
             due:  02/24
 
      - date:            02/23
        topics:          Relational databases
+       items:
+           - name: Notes
+             link: notes12.html
 
 - name:     Server-Side Programming
   days:
      - date:            02/28
        topics:          HTTP, HTML
+       items:
+           - name: Notes
+             link: notes13.html
        assignment: 
-            name: Homework 5       
+            name: Homework 5     
             due:  03/03
 
      - date:            03/02
        topics:          Tornado
+       items:
+           - name: Agenda
+             link: agenda14.html
+
        
      - date:            03/07
        topics:          Tornado templates
