--- a/pages/homework6.yaml
+++ b/pages/homework6.yaml
@@ -1,28 +1,30 @@
 title:      "Homework 6: Tornado Templates"
 icon:       fa-book
-navigation: []
+navigation:
+  - name: "Class Home"
+    link: "/~cforstal/cdt-30020-sp17"
+    icon: "fa-home"
 internal:
 external:
 body:       |
-
-  ## Readings
-
-  This week, you will be finishing up [Project 02: SearchIt].  This reading
-    assignment will allow you practice using [templates] in [Tornado] by
-    modifying a small web application.
-
-  [Project 02: SearchIt]:   project02.html
-  [templates]:              http://www.tornadoweb.org/en/stable/template.html
-  [Tornado]:                http://www.tornadoweb.org/
+  [HTML]:           https://developer.mozilla.org/en-US/docs/Web/HTML
+  [render]:     http://www.tornadoweb.org/en/stable/web.html?highlight=get_argument#tornado.web.RequestHandler.render
+  [Tornado]: http://www.tornadoweb.org
+  [templates]: http://www.tornadoweb.org/en/stable/guide/templates.html
   [separation of concerns]: https://en.wikipedia.org/wiki/Separation_of_concerns
 
+  Homework for **Tuesday, March 6**
+
+  ## Readings
+  1. [Tornado Templates and UI](http://www.tornadoweb.org/en/stable/guide/templates.html)
+  
   ## Template Review
 
   The idea behind using [templates] in web application frameworks such as
   [Tornado] is to allow developers to separate data processing logic from the
-  presentation code.  This [separation of concerns] allows each component to only
-  focus on what is necessary with the hopes of making the code simpler to modify
-  and maintain (but not necessarily to initially create).
+  presentation code.  This [separation of concerns] allows each component to
+  only focus on what is necessary with the hopes of making the code simpler to
+  modify and maintain (but not necessarily to initially create).
 
   To use [templates] in [Tornado], simply create a [HTML] file such as
   `page.html` and then use the [render] method on that file:
@@ -93,123 +95,172 @@ body:       |
 
   ## Activity
 
-  For this assignment, you will need to download the [reading06.zip] archive:
+  <h4> Download the app skeleton </h4>
+  
+  <h4><a href="static/misc/hw6.zip" class="label label-info">
+  <i class="fa fa-file-archive-o"></i> hw6.zip</a></h4>
 
-      :::bash
-      $ curl -O https://www3.nd.edu/~pbui/teaching/cdt.30020.sp16/static/zip/reading06.zip
-      $ unzip reading06.zip
-      $ ls
-      students.html  students.py  students.tsv
+  <h4> Structure of the application </h4>
+  
+  <h5>kidslit.py</h5>
+  
+  This is a lightweight module for interfacing with the children's literature
+  database we looked at last week. **You shouldn't need to modify this code at 
+  all.**
+  
+   - **LibraryDB** This class represents a connection to the database.
+     Instantiating a new LibraryDB object generates the database,
+     builds and populates the tables using supplied JSON data.
+     
+   - `search_authors_name(NAME)` -- This method of the LibraryDB class will
+     search the **Author** table for authors whose name matches *NAME*
+     (anywhere in the string). It returns a list of rows containing matching
+     author records. Each row has the following fields:
 
-  The archive contains the following files:
+       - *auth_id*
+       
+       - *first_name*
+       
+       - *last_name*
+       
+       - *birth*
+       
+       - *death* - NB may be **NULL** if the author is alive
+       
+    - `search_books_author(ID)` -- This method of the LibraryDB class will
+      search the **Book** table for books whose *auth_id* matches *ID*. It
+      returns a list of rows, each of which has:
+        
+        - *title*
+        
+        - *pub* - date of publication
 
-  1. `students.html`: This is the [HTML] template that you will be modifying.
-
-  2. `students.py`: This is the [Python] web application that you will be modifying.
-
-  3. `students.tsv`: This contains the student data as seen in [Reading 04].
-
-  An example of the web application can be found at [xavier.h4x0r.space:9999](http://xavier.h4x0r.space:9999/).
-
-  ### `students.py`
-
-  First, you will need to modify the web application in `students.py` by
-  completing the `TODOs` in the `IndexHandler` and `Application` classes:
-
-      :::python
-      # Handlers
-
-      class IndexHandler(tornado.web.RequestHandler):
-          def get(self):
-              # TODO: Get field and query value from form
-
-              # TODO: Search for students if field and query are valid
-
-              # TODO: Render 'students.html' template by passing field, query, and
-              # search results
-
-  For the `IndexHandler` class, you need to do the following:
-
-  1. Retrieve the `field` and `query` values from the [HTML] form by using the
-  [get_argument] method.
-
-  2. If the `field` and `query` values are valid, then perform a search on the
-  database with the `field` and `query` values and store the results in a
-  variable called `students`.
-
-  3. Render the `students.html` template by using the [render] method and
-  passing the appropriate arguments (ie. `field`, `query`, and `students`).
-
-  The `IndexHandler` will resemble what you have seen in [Project 02: SearchIt]
-  and [Reading 05].
-
-      :::python
-      # Application
-
-      class Application(tornado.web.Application):
-          def __init__(self, port=PORT):
-              tornado.web.Application.__init__(self, debug=True)
-              self.logger   = logging.getLogger()
-              self.ioloop   = tornado.ioloop.IOLoop.instance()
-              # TODO: Define database and port instance variables
-
-              # TODO: Add IndexHandler
-
-
-  For the `Application` class, you need to complete the **constructor** by
-  doing the following:
-
-  1. Define the `database` and `port` instance variables.
-
-  2. Add the `IndexHandler` to the `Application` instance.
-
-  The `Application` will resemble what you have seen in [Project 02: SearchIt]
-  and [Reading 05].
-
-  ### `students.html`
-
-  Once you have the `students.py` web application working, you can then modify
-  the the `students.html` template by doing the following:
-
-      :::html
-      <!--// TODO:
-
-      Create Form that contains:
-
-      1. Text Input for the query
-
-      2. Select dropdown for the field
-
-      3. Submit button
-
-      //-->
-
-
-      <!--// TODO:
-
-      If query is valid, then display a table containing the NetID, First Name,
-      Last Name, and Classification from the search results.
-
-      Otherwise, display a message telling the user to enter in something to
-      search.
-
-      //-->
-
-  The first `TODO` requires you to create a form, while the second `TODO`
-  requires you to display the results of the search in a table.
-
-  ## Questions
-
-  Answer the following questions in your `reading06/README.md` file:
-
-  1. How are values from the [HTML] form accessed from the [Tornado] web
-  application?
-
-  2. How are values from the [Tornado] web application passed to the [HTML]
-  template?
-
-  3. What do you think of [templates]?  Are they worth the hassle?
-
+    - `author_detail(ID)` -- This method of the LibraryDB class will search the
+      **Author** table for an author whose *auth_id* matches *ID*. It returns 
+      a row containing the following fields
+        
+        - *auth_id*
+        
+        - *first_name*
+        
+        - *last_name*
+        
+        - *birth*
+        
+        - *death* - NB may be **NULL** if the author is alive
+        
+        - *nationality*
+        
+        - *bio*  - a short paragraph stolen from Wikipedia
+        
+        - *image_url* - the address of an author pic
+        
+  <h5>web.py</h5>
+  
+  This is the tornado web front-end for the kidslit database. It contains two
+  handlers. **You shouldn't have to modify either of them.**
+    
+    - **AuthorSearchHandler**
+    
+      - called when the client requests the root (i.e. home page)
+      
+      - performs `search_authors_name(NAME)` where by default *NAME* is blank,
+        matching all authors.
+        
+      - renders the template `author_index.html`, passing the `rows` returned
+        by the search.
+        
+    - **AuthorDetailHandler**
+    
+      - called when the client requests a specific author by id, using a path
+        like `/author/ID`, where *ID* is a number.
+        
+      - performs `author_detail(ID)` to get the author's record from the 
+        *Author* table
+        
+      - performs `search_books_author(ID)` to get the list of books by that 
+        author out of the *Books* table
+        
+      - renders the template `author_detail.html`, passing `author` with the
+        contents of the author record and `books` with the list of book records.
+  
+  <h4>Modify the templates</h4>
+  
+  Here is where you get to write some code! All you need to do is fill in the
+  two HTML files, including some Tornado template control code, so that the 
+  web front-end shows the results of the backend database searches.
+  
+  <h5>author_index.html</h5>
+  
+  Inside the <div class="results"> </div> element, use template code to
+  display the list of authors.
+       
+   - use either 
+   
+       - a `<table>` with one `<tr>` per author, or,
+     
+       - just a set of `<div>` elements, one per author
+     
+   - loop over each record in `rows`
+   
+   - for each author, display
+   
+       - the author's name
+     
+       - birth date
+     
+       - death date <i class="fa fa-hand-o-right"></i> check for `NULL`
+     
+   - make at least part of each record a link to the author's detail page
+   
+       - i.e. `/author/ID`
+     
+       - where *ID* is the author's *auth_id*
+     
+     
+  <h5>author_detail.html</h5>
+  
+  1. Fill in the `<title>` tag with the name of the author
+  
+  2. Inside the `<div class="header"></div>` add an `<h1>` tag with the author's
+     name again.
+     
+  3. Inside the `<div class="details"></div>` display the author's `bio` string
+     and add an `<img src="URL">` where *URL* is the author's `image_url`.
+     
+  4. Inside the `<div class="bibliography"></div>`, display all the books we
+     have by this author.
+       
+       - loop over `books`
+       
+       - inside the `<table></table>` add one `<tr>` per book
+       
+       - display the title and publication date, each in its own `<td>`
+  
+  <h5>Optional customization</h5>
+  
+  Grades for this homework will be given according to the specs above. 
+  Apart from these, feel free to spruce up the page any way you like, or add
+  extra material.
+  
+  In particular, you might want to mess around with `/css/style.css`. See the
+  examples and reference material [here](
+  https://www.w3schools.com/css/default.asp). For example,
+  
+    - try setting `font-family` or other text properties in `body` or in 
+      `.container`, to affect the whole page.
+      
+    - add a background, or change the color scheme
+      
+    - try changing `h1`
+    
+    - change the display of `div` elements by specifying `margin` `padding`
+      `border` `box-shadow` etc.
+  
+    - right now all that's in `syle.css` is a line to keep the displayed
+      images small - if you alter it, some of the images might be really huge
+  
+ 
   ## Feedback
 
   If you have any questions, comments, or concerns regarding the course, please
@@ -217,20 +268,11 @@ body:       |
 
   ## Submission
 
-  To submit your response, please commit your work (responses and scripts) to
-  the **reading06** folder of your your **Readings** [Bitbucket] repository.
-
-      :::bash
-      $ git add students.py students.html students.tsv README.md
-      $ git commit -m "reading 06: completed"
-      $ git push
-
-  [Bitbucket]:      https://bitbucket.org
-  [Git]:            https://git-scm.com/
-  [reading06.zip]:  static/zip/reading06.zip
-  [HTML]:           https://developer.mozilla.org/en-US/docs/Web/HTML
-  [Python]:         https://www.python.org/
-  [Reading 04]:     reading04.html
-  [get_argument]: http://www.tornadoweb.org/en/stable/web.html?highlight=get_argument#tornado.web.RequestHandler.get_argument
-  [render]:     http://www.tornadoweb.org/en/stable/web.html?highlight=get_argument#tornado.web.RequestHandler.render
-  [Reading 05]:     reading05.html
+  To submit your work, please commit the following files to your **homework6**
+  folder, and then push to GitLab (or upload using the web interface).
+    
+    - `author_detail.html`
+    
+    - `author_index.html`
+    
+    - if you modify other files, include them, too
