--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -102,8 +102,8 @@
      - date:            03/02
        topics:          Tornado
        items:
-           - name: Agenda
-             link: agenda14.html
+           - name: Notes
+             link: notes14.html
 
        
      - date:            03/07
@@ -133,7 +133,9 @@
      - date:            03/28
        items:
           - name:       Checklist 2
+            link:       checklist2.html
           - name:       Test 2
+            link:       test2.html
      
 
 - name:     Client-Side Programming
@@ -142,16 +144,26 @@
        topics:          HTML + CSS
 
      - date:            04/04
+       items:
+         - name: Notes
+           link: notes21.html
        topics:          Bootstrap
        assignment: 
             name: Homework 7       
             due:  04/07
    
      - date:            04/06
+       items:
+         - name: Notes
+           link: notes22.html
        topics:          JavaScript       
       
      - date:            04/11
        topics:          AJAX
+       items: 
+         - name: Notes
+           link: notes23.html
+       
        assignment: 
             name: Homework 8       
             due:  04/14
